
!https://github.com/tinkerpop/pipes/raw/master/doc/images/pipes-2.png!

h3. Version 2.5.0 (NOT OFFICIALLY RELEASED YET)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>2.5.0-SNAPSHOT</version>
</dependency>
```

* @GroupByPipe@ and @GroupByReducePipe@ now take a @Collection@ instead of a @List@ for the @Map@ value that stores results.

==<hr/>==

h3. Version 2.4.0 (August 4, 2013)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>2.4.0</version>
</dependency>
```

* Added @Pipeline.cast@ to allow pipeline end type to be reset
* Added a dependency to Blueprints and now Pipes can reference graph constructs
* Added all the graph-related pipes in Gremlin to Pipes
* @FilterPipe.Filter@ no longer exists as now @Compare@ should be used
* Full support for @Predicate@ from Blueprints
* Added @ToStringPipe@ to support streaming results out as as @Object.toString()@
* Added branch factor support to all @VerticesVerticesPipe@ and @VerticesEdgesPipe@ classes
* @IntervalFilterPipe@ now requires two @Comparables@ not just generic @Object@

h3. Version 2.3.0 (March 20, 2013)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>2.3.0</version>
</dependency>
```

* Breaking API change with @GroupByReducePipe@ -- @Iterator<V>@ is now @List<V>@
* Fixed a bug in @GroupByReducePipe@ when @LoopPipe@ is used in conjunction
* Minor speed improvement to path calculations
* Moved @IdentityPipe@ to root package as it is not a @TransformPipe@
* Added @<S,E>@ typing to @TransformPipe@ interface and updated respective pipe implementations
* @ExceptFilterPipe@ and @RetainFilterPipe@ support @String[]@ of named steps to reference as collection
* Added sub-interfaces of @LazySideEffectPipe@ and @GreedySideEffectPipe@ to specify when sideeffect is ready
* Made @Row.getColumnNames()@ public